--- a/bilibili-lite/src/live/room.styl
+++ b/bilibili-lite/src/live/room.styl
@@ -8,6 +8,7 @@
 .count-choice .send-btn-animation
 .chat-history-panel .chat-history-list .chat-item.danmaku-item .title-label
 .bottom-actions .left-action
+.dialog-ctnr .arrow
 .user-level-detail:after
 .user-level-detail:before
 .chat-history-panel .chat-history-list .chat-item.danmaku-item.guard-level-1::before
