--- a/bilibili-lite/src/public/feed.styl
+++ b/bilibili-lite/src/public/feed.styl
@@ -9,6 +9,7 @@
   color var(--c-text) !important
 
 .dynamic-link-hover-bg
+.shop-desc .desc-box .price-desc
   color var(--c-accent) !important
 
 .article-container:hover .text-area
@@ -22,6 +23,7 @@
   height auto !important
 
 .feed-card .card
+.dynamic-link-hover-bg:hover
   border 0 !important
   background-color var(--c-background)
 
@@ -32,6 +34,7 @@
 .card-content .not-support
 .card-content .deleted
 .bg-white
+.shop-panel .shop-list
   border-color var(--c-border) !important
   background-color var(--c-hover) !important
 
