--- a/bilibili-lite/src/space/home.styl
+++ b/bilibili-lite/src/space/home.styl
@@ -27,6 +27,7 @@
 #page-dynamic .col-2
 #page-fav .fav-main .filter-item.search
 .be-tab-cursor:after
+#page-index .col-2 .section .auth-detail
   display none
 
 #pin-wrapper .pin-layer-header .pin-layer-header-text
@@ -244,6 +245,7 @@ input[type=text]:focus
 #page-index .col-2 .section.elec .elec-trigger
 #page-index .col-2 .section.i-live .i-live-off-guest a
 #page-index .col-2 .section.i-live .i-live-link
+  position relative
   width 60px
   height 60px
   border 1px solid var(--c-border)
