--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -52,6 +52,7 @@ button
 .pagelist .flip-left .active
 .active-main .back-top
 .topic-main .back-top
+.bilibili-player-feedback-submit
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
@@ -132,6 +133,7 @@ button
 .recharge-store-box ul.select-list .item
 .pagelist .flip-left span
 .web-notice .more
+.bilibili-player-feedback-submit.disable
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
