--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -25,6 +25,7 @@
 .section-ep-wrapper .ep-item.cursor
 .bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-hint
 .bilibili-player .bilibili-player-area .bilibili-player-video-wrap .bilibili-player-volumeHint
+#bofqi.mini-player .drag-bar
 	background-color var(--c-hover) !important
 
 .main-container .media-info .media-right .pub-wrapper .up-info-wrapper .split-line
@@ -100,6 +101,10 @@ ul.rate-star li i.icon-star-full
 .bilibili-player-feedback
 .bilibili-player-feedback-title
 	border-color var(--c-border)
+
+#bofqi.mini-player .drag-bar
+#bofqi.mini-player:before
+	box-shadow: 0 0 5px var(--c-border)
 
 .bilibili-player
 	box-shadow none
