--- a/bilibili-lite/src/public/feed.styl
+++ b/bilibili-lite/src/public/feed.styl
@@ -2,7 +2,13 @@
 .feed-card .content .bottom img
   display none !important
 
+.feed-tag .publish-panel-container
+.feed-tag .publish-panel
+.feed-tag .card
+  background-color var(--c-background) !important
+
 .video-container .text-area .title
+.feed-tag .separater-line
   color var(--c-title) !important
 
 .video-container .text-area .view-danmaku span
@@ -50,6 +56,7 @@
   color var(--c-title) !important
 
 .card .more-panel .child-button:hover
+.feed-title
   background-color var(--c-hover) !important
   color var(--c-title) !important
 
