--- a/bilibili-lite/src/video/base.styl
+++ b/bilibili-lite/src/video/base.styl
@@ -26,6 +26,7 @@
 .bilibili-player-video-sendbar .bilibili-player-video-inputbar .bilibili-player-video-hint
 .bilibili-player .bilibili-player-area .bilibili-player-video-wrap .bilibili-player-volumeHint
 #bofqi.mini-player .drag-bar
+.video-page-card .card-box .pic-box
 	background-color var(--c-hover) !important
 
 .main-container .media-info .media-right .pub-wrapper .up-info-wrapper .split-line
