--- a/bilibili-lite/src/home/base.styl
+++ b/bilibili-lite/src/home/base.styl
@@ -2,6 +2,9 @@
 .van-popper-channel .popper__arrow
 	display none !important
 
+.van-popover .sub-item a:hover
+	background-color var(--c-hover)
+
 .video-card-common .ex-up
 .video-card-common .up
 .article-card .r-con .up
@@ -208,7 +211,8 @@ manga-panel
 	border-color var(--c-border)
 
 .elevator .bg23
-	background-color none
+	backdrop-filter blur(5px)
+	background-color var(--c-hover)
 
 /* 页脚 */
 .international-footer
