--- a/bilibili-lite/src/manga/info.styl
+++ b/bilibili-lite/src/manga/info.styl
@@ -1,9 +1,14 @@
+.episode-comment
+  background-color var(--c-background) !important
+  
 .read-nav .episode
+.episode-comment .header-section div
   color var(--c-title) !important
 
 .action-bar-container .app-button
 .hover-toast .app-button
 .floating-button
+.episode-comment .header-section .close-button
   background-color transparent !important
 
   &::after
