--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -42,6 +42,7 @@ em:not(.icon)
 .gg-icon
 .tag-list li.tag-item
 .tag-area .tag
+.link-tag
 .tag-area .btn-add
 .timeline-box .timeline-item .item-right p.num a
 .timeline-box .timeline-item .item-right p.num span
@@ -56,6 +57,7 @@ em:not(.icon)
 
 .tag-list li.tag-item:hover
 .tag-area .tag:hover
+.link-tag:hover
   background-color var(--c-hover) !important
 
 .primary-menu .nav-menu .channel.on:after
@@ -73,6 +75,7 @@ em:not(.icon)
 
 .tag-list li.tag-item:hover
 .tag-area .tag:hover
+.link-tag:hover
   border-color var(--c-accent) !important
 
 /* input */
