--- a/bilibili-lite/src/public/base.styl
+++ b/bilibili-lite/src/public/base.styl
@@ -50,6 +50,7 @@ a span:hover
 
 hr
 	border-color var(--c-border) !important
+	background-color var(--c-border) !important
 
 table tr
 	border-color var(--c-border) !important
