--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -53,6 +53,10 @@ button
 .active-main .back-top
 .topic-main .back-top
 .bilibili-player-feedback-submit
+.sidebar-canvas
+.cntr .check-all
+.album-popup-ensure
+.info-line .attend
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
@@ -134,6 +138,8 @@ button
 .pagelist .flip-left span
 .web-notice .more
 .bilibili-player-feedback-submit.disable
+.album-popup-cancel
+.author-info .favourite-btn-ctnr .communicate-btn
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
