--- a/bilibili-lite/src/v/blackboard.styl
+++ b/bilibili-lite/src/v/blackboard.styl
@@ -8,6 +8,9 @@
 .bili-share-pc .weixin-hover .qr-before
   background-color var(--c-background) !important
 
+.activity-playlist .activity-playlist-item
+  background-color transparent !important
+
 .active-title .b-active-t
 .pagelist .flip-left .ellipsis
   color var(--c-title) !important
